@@ -289,7 +289,7 @@ EXPORT_SIG(__declspec(dllexport) char*) _OnIncomingIRCLine(HANDLE a_socket, cons
 					l_mark = " \x0315*\x03";
 				}
 #endif
-				
+
 				if(l_markPos == 1)
 					l_newMsg.append(l_mark);
 				else
@@ -704,10 +704,12 @@ EXPORT_SIG(int) INI_GetBool(HWND mWnd, HWND aWnd, char *data, char *parms, BOOL 
 	if(!data || !*data)
 		return 0;
 
+	const string_vector l_data = SplitString(data, " ", 2);
+	const std::wstring l_key = UnicodeFromCp(CP_UTF8, l_data[0]);
+	bool l_default = (l_data.size() > 1 && atoi(l_data[1].c_str()) != 0);
+
 	auto l_ini = GetBlowIni();
-	
-	const std::wstring l_key = UnicodeFromCp(CP_UTF8, data);
-	bool b = l_ini->GetBool(l_key.c_str(), false);
+	bool b = l_ini->GetBool(l_key.c_str(), l_default);
 
 	sprintf_s(data, 900, "%d", (b ? 1 : 0));
 
@@ -758,7 +760,7 @@ EXPORT_SIG(int) INI_GetSectionBool(HWND mWnd, HWND aWnd, char *data, char *parms
 		if(l_data.size() >= 4)
 		{
 			auto l_ini = GetBlowIni();
-			
+
 			const std::wstring l_key = UnicodeFromCp(CP_UTF8, l_data[2]);
 			bool l_default = STR_TO_BOOL(l_data[3]);
 
@@ -784,7 +786,7 @@ EXPORT_SIG(int) INI_SetSectionBool(HWND mWnd, HWND aWnd, char *data, char *parms
 		if(l_data.size() >= 4)
 		{
 			auto l_ini = GetBlowIni();
-			
+
 			const std::wstring l_key = UnicodeFromCp(CP_UTF8, l_data[2]);
 			bool l_value = STR_TO_BOOL(l_data[3]);
 
