@@ -1,4 +1,7 @@
 
+== ??? ===
+	* Fixed issue 23, identified by ex0a (outgoing crypt mark did not respect process_outgoing default).
+
 == 2010-09-28 ==
 	* Fixed issues with no_legacy = 1, most notably encrypt_topic and other contact specific
 	  settings being broken.
